feat(core): make wait_wal_table lightweight to be possible to use from many connections